// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminCustomerBillingLink linked billing account 1`] = `
<DocumentFragment>
  <div
    class="site-admin-customer-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <a
        class="anchorLink mr-2 d-flex align-items-center"
        href="https://example.com"
      >
        View customer account 
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline ml-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
      <button
        class="btn btnSecondary"
        type="button"
      >
        Unlink
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SiteAdminCustomerBillingLink no linked billing account 1`] = `
<DocumentFragment>
  <div
    class="site-admin-customer-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="btn btnSecondary"
        type="button"
      >
        Link billing customer
      </button>
    </div>
  </div>
</DocumentFragment>
`;
